<resources>

    <string name="action_settings">Settings</string>

    <string name="app_name">myhealthypup</string>

    <string name="health">Health</string>
    <string name="exercise">Exercise</string>
    <string name="diet">Diet</string>

    <string name="profile">Info</string>
    <string name="add">"Edit Age</string>
    <string name="add_vet_info">Edit Vet</string>

    <string name="pup_name">Name of Dog</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="vet">Vet Information</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>

    <string name="wellbeing">Health Log</string>
    <string name="food">Food Log</string>
    <string name="activity">Activity Log</string>

    <string name="time">Time</string>
    <string name="length">Length</string>
    <string name="place">Place</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="notes">Notes</string>

    <string name="add_exercise">Add Activity</string>
    <string name="hint_place">Place of activity (ex: park)</string>

    <string-array name="length_spinner">
        <item>SELECT DURATION</item>
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>40 minutes</item>
        <item>50 minutes</item>
        <item>1 hour</item>
        <item>1.5 hours</item>
        <item>More than 1.5 hours</item>
    </string-array>

    <string-array name="time_spinner">
        <item>SELECT TIME OF DAY</item>
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
    </string-array>

    <string name="add_food">Add Food</string>
    <string name="hint_food">Add Notes (ie. did not eat)</string>

    <string-array name="food_spinner">
        <item>SELECT TYPE OF FOOD</item>
        <item>Treat</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

    <string name="add_vet">Add Health Info</string>
    <string name="hint_vet">Add Notes (ie. received shot)</string>

    <string name="hint_age">Ex: 5</string>

    <string-array name="vet_spinner">
        <item>SELECT TYPE OF VET VISIT</item>
        <item>Annual visit</item>
        <item>Sick visit</item>
        <item>Grooming</item>
        <item>Vaccine</item>
    </string-array>

    <string name="save">Save</string>

    <string name="add_breed">EDIT BREED</string>
    <string name="hint_breed">Ex: Pug</string>

    <string name="add_name">EDIT NAME</string>
    <string name="hint_name">Ex: Spot</string>
    <string name="edit">Edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_exercise">AddExercise</string>

</resources>
