<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/date_view"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/date"
        android:textAlignment="center"
        android:typeface="sans" />

    <TextView
        android:id="@+id/time_view"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/time"
        android:textAlignment="center"
        android:typeface="sans" />

    <TextView
        android:id="@+id/length_view"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/length"
        android:textAlignment="center"
        android:typeface="sans" />

    <TextView
        android:gravity="center"
        android:textAlignment="center"
        android:typeface="sans"
        android:id="@+id/place_view"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:text="@string/place"
        android:layout_weight="1"/>


</LinearLayout>