<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/date_view"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/date"
        android:textAlignment="center"
        android:typeface="sans" />

    <TextView
        android:id="@+id/type_view"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/type"
        android:textAlignment="center"
        android:typeface="sans" />

    <TextView
        android:id="@+id/notes_view"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/notes"
        android:textAlignment="center"
        android:typeface="sans" />


</LinearLayout>