<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:baselineAlignedChildIndex="@id/textView"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true">

        <TextView
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:id="@+id/date_view"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:textAlignment="center"
            android:typeface="sans" />


        <TextView
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:id="@+id/type_view"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/type"
            android:textAlignment="center"
            android:typeface="sans" />

        <TextView
            android:id="@+id/notes_view"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/notes"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans" />


    </LinearLayout>

    <ListView
        android:id="@+id/diet_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <ImageButton
        android:contentDescription="@string/add"
        android:id="@+id/add_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/add"
        android:layout_marginEnd="26dp"
        android:layout_above="@+id/diet_list"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
