<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:nestedScrollingEnabled="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/text"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/name"
                android:textAlignment="center"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/pup_name"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/pup_name"
                android:textAlignment="center"
                android:textStyle="italic"
                android:typeface="sans" />

            <Button
                android:id="@+id/add_name"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:text="@string/edit" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/age"
                android:textAlignment="center"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/age"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:text="@string/age"
                android:textAlignment="center"
                android:textStyle="italic"
                android:typeface="sans" />

            <Button
                android:id="@+id/add_age"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:text="@string/edit" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:text="@string/breed"
                android:textAlignment="center"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:textSize="18sp"
                android:layout_gravity="center"
                android:id="@+id/breed"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:textAlignment="center"
                android:text="@string/breed"
                android:textStyle="italic"
                android:typeface="sans" />

            <Button
                android:id="@+id/add_breed"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:text="@string/edit" />


            <TextView
                android:id="@+id/vet"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:text="@string/vet"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/name_vet"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/name"
                android:textStyle="italic"
                android:typeface="sans" />

            <TextView
                android:id="@+id/phone"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/phone"
                android:textStyle="italic"
                android:typeface="sans" />

            <Button
                android:id="@+id/add_vet_info"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:layout_width="55dp"
                android:layout_height="35dp"
                android:text="@string/edit" />

            </LinearLayout>



</ScrollView>

